fix some small issues with tab name overflow & add button function

--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -31,10 +31,9 @@ body {
   background-color: var(--secondary);
   padding: 10px;
   border-radius: 3px;
-  width: 150px;
+  width: 175px;
   margin-right: 10px;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
@@ -46,7 +45,9 @@ body {
 .tab-content {
   display: flex;
   align-items: center;
-}
+  max-width:85%;
+  margin-right:2%; 
+} 
 
 .tab-favicon {
   width: 18px;
@@ -61,6 +62,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 
 .tab-close {
   width: 14px;
@@ -204,12 +206,14 @@ body {
 .menu-btn {
   display: inline-flex;
   padding: 5px;
-  padding-right: 10px;
   flex-direction: column;
+  cursor:pointer;
   align-items: center;
   justify-content: space-between;
   height: 15px;
+  width:15px;
   margin: 0 10px;
+  cursor: pointer;
 }
 
 .menu-dot {
@@ -256,7 +260,7 @@ body {
 .context-menu__item {
   padding: 10px 10px;
   border-bottom: 1px solid var(--secondary-text);
-  font-size: 12px;
+  font-size: 14px;
   cursor: pointer;
 }
 
@@ -279,4 +283,9 @@ body {
   font-size: 16px;
   margin-right: 3px;
   vertical-align: text-top;
+}
+
+
+.context-menu__item i{
+  margin-right:5px;
 }
